--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react-swc": "^3.6.0",
